# DHCPv6-Client-Android

./: .gitignore  .gitmodules  .travis.yml  README.markdown  README.md  build.gradle  detekt.yml  gradle.properties
.circleci/: config.yml
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/debug/: output-metadata.json
app/schemas/be.mygod.dhcpv6client.room.Database/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ifaddrs.cpp  ifaddrs.h
app/src/main/java/be/mygod/dhcpv6client/: App.kt  BootReceiver.kt  Dhcp6cDaemon.kt  Dhcp6cManager.kt  Dhcp6cService.kt  Dhcp6cTileService.kt  DuidPreferenceDialogFragment.kt  MainActivity.kt  MainPreferenceFragment.kt
app/src/main/java/be/mygod/dhcpv6client/room/: Database.kt
app/src/main/java/be/mygod/dhcpv6client/util/: DeviceStorageApp.kt  Thread.kt
app/src/main/java/be/mygod/dhcpv6client/widget/: SmartSnackbar.kt
app/src/main/res/xml/: pref_main.xml
gradle/wrapper/: gradle-wrapper.properties
mobile/: .gitignore  CMakeLists.txt  build.gradle  google-services.json
mobile/src/freedom/: AndroidManifest.xml
mobile/src/main/: AndroidManifest.xml
mobile/src/main/java/be/mygod/dhcpv6client/: App.kt  BootReceiver.kt  Dhcp6cDaemon.kt  Dhcp6cManager.kt  Dhcp6cService.kt  Dhcp6cTileService.kt  DuidPreferenceDialogFragment.kt  EBegFragment.kt  MainActivity.kt  MainPreferenceFragment.kt
mobile/src/main/java/be/mygod/dhcpv6client/preference/: SharedPreferenceDataStore.kt
mobile/src/main/java/be/mygod/dhcpv6client/room/: Database.kt  InterfaceStatement.kt
mobile/src/main/java/be/mygod/dhcpv6client/util/: Events.kt  Thread.kt  Utils.kt
mobile/src/main/java/be/mygod/dhcpv6client/widget/: SmartSnackbar.kt
mobile/src/main/res/drawable/: ic_device_battery_alert.xml
mobile/src/main/res/drawable-v24/: ic_launcher_foreground.xml
mobile/src/main/res/layout/: activity_main.xml
mobile/src/main/res/mipmap-anydpi-v24/: banner.xml
mobile/src/main/res/values/: colors.xml  strings.xml  styles.xml
mobile/src/main/res/values-night/: colors.xml
mobile/src/main/res/values-v26/: strings.xml
mobile/src/main/res/values-v27/: styles.xml
mobile/src/main/res/values-zh-rCN/: strings.xml
mobile/src/main/res/xml/: pref_main.xml
